Closed Bug 1820708 Opened 1 year ago Closed 1 year ago

fix confusion between imgIContainer flags and SVGIntegrationUtils::FLAG_SYNC_DECODE_IMAGES flag

Categories

(Core :: SVG, defect)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: tnikkel, Assigned: tnikkel)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

This flag is only using in one place. Here is accidentally gets put into a variable that is only to be used with imgIContainer flags. They are just untyped uint32_t which allows this to happen. Noticed this by inspection while doing something else.

Severity: -- → S3
Blocks: 1801052
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7954e1671be3
Fix confusion between imgIContainer flags and SVGIntegrationUtils::FLAG_SYNC_DECODE_IMAGES flag. r=firefox-svg-reviewers,longsonr
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: