Bug 1820708. Fix confusion between imgIContainer flags and SVGIntegrationUtils::FLAG_SYNC_DECODE_IMAGES flag. r=firefox-svg-reviewers,longsonr

This flag is only using in one place. Here is accidentally gets put into a variable that is only to be used with imgIContainer flags. They are just untyped uint32_t which allows this to happen. Noticed this by inspection while doing something else.

Differential Revision: https://phabricator.services.mozilla.com/D171826